@@ -1,6 +1,8 @@
 package uk.gov.hmcts.reform.hmc.repository;
 
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.jdbc.Sql;
 import uk.gov.hmcts.reform.hmc.BaseTest;
@@ -8,8 +10,8 @@ import uk.gov.hmcts.reform.hmc.data.CaseHearingRequestEntity;
 import uk.gov.hmcts.reform.hmc.data.ChangeReasonsEntity;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -46,13 +48,27 @@ class CaseHearingRequestRepositoryIT extends BaseTest {
         assertNull(versionNumber);
     }
 
+    @ParameterizedTest
+    @CsvSource({
+        "9372710950276233, true",
+        "9372710950276239, false"
+    })
+    @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, GET_HEARINGS_DATA_SCRIPT})
+    void testGetIsAPanel(String caseRef, boolean expectedFlag) {
+        boolean isAPanelFlag = caseHearingRequestRepository
+            .getHearingDetails(caseRef)
+            .getFirst()
+            .getIsAPanelFlag();
+        assertThat(isAPanelFlag).isEqualTo(expectedFlag);
+    }
+
     @Test
     @Sql(scripts = {DELETE_HEARING_DATA_SCRIPT, GET_HEARINGS_DATA_SCRIPT})
     void testGetHearingDetails_ValidCaseRef() {
         List<CaseHearingRequestEntity> entities = caseHearingRequestRepository
             .getHearingDetails("9372710950276233");
         assertEquals(3, entities.size());
-        assertEquals("9372710950276233", entities.get(0).getCaseReference());
+        assertEquals("9372710950276233", entities.getFirst().getCaseReference());
         assertEquals(2000000010L, entities.get(0).getHearing().getId());
         assertEquals(20, entities.get(0).getVersionNumber());
         assertEquals("9372710950276233", entities.get(1).getCaseReference());
@@ -65,8 +81,8 @@ class CaseHearingRequestRepositoryIT extends BaseTest {
         assertEquals("HEARING_UPDATED", entities.get(0).getHearing().getStatus());
         assertEquals("HEARING_REQUESTED", entities.get(1).getHearing().getStatus());
         assertEquals("HEARING_REQUESTED", entities.get(2).getHearing().getStatus());
-        assertEquals(2, entities.get(0).getHearing().getHearingResponses().get(0).getHearingResponseId());
-        assertTrue(entities.get(0).getHearing().getIsLinkedFlag());
+        assertEquals(2, entities.get(0).getHearing().getHearingResponses().getFirst().getHearingResponseId());
+        assertTrue(entities.getFirst().getHearing().getIsLinkedFlag());
         assertFalse(entities.get(1).getHearing().getIsLinkedFlag());
         assertTrue(entities.get(2).getHearing().getIsLinkedFlag());
     }
@@ -77,16 +93,16 @@ class CaseHearingRequestRepositoryIT extends BaseTest {
         List<CaseHearingRequestEntity> entities = caseHearingRequestRepository
             .getHearingDetailsWithStatus("9372710950276233", "HEARING_REQUESTED");
         assertEquals(2, entities.size());
-        assertEquals("9372710950276233", entities.get(0).getCaseReference());
-        assertEquals(2000000009L, entities.get(0).getHearing().getId());
+        assertEquals("9372710950276233", entities.getFirst().getCaseReference());
+        assertEquals(2000000009L, entities.getFirst().getHearing().getId());
         assertEquals(30, entities.get(0).getVersionNumber());
         assertEquals("9372710950276233", entities.get(1).getCaseReference());
         assertEquals(2000000000L, entities.get(1).getHearing().getId());
         assertEquals(10, entities.get(1).getVersionNumber());
         assertEquals("TEST", entities.get(0).getHmctsServiceCode());
-        assertEquals("HEARING_REQUESTED", entities.get(0).getHearing().getStatus());
-        assertEquals(3, entities.get(0).getHearing().getHearingResponses().get(0).getHearingResponseId());
-        assertFalse(entities.get(0).getHearing().getIsLinkedFlag());
+        assertEquals("HEARING_REQUESTED", entities.getFirst().getHearing().getStatus());
+        assertEquals(3, entities.get(0).getHearing().getHearingResponses().getFirst().getHearingResponseId());
+        assertFalse(entities.getFirst().getHearing().getIsLinkedFlag());
         assertTrue(entities.get(1).getHearing().getIsLinkedFlag());
     }
 
@@ -161,7 +177,7 @@ class CaseHearingRequestRepositoryIT extends BaseTest {
         final List<String> changeReasons =
                 changeReasonsEntities.stream()
                         .map(ChangeReasonsEntity::getChangeReasonType)
-                        .collect(Collectors.toList());
+                        .toList();
 
         assertTrue(changeReasons.containsAll(List.of("reason 1", "reason 2", "reason 3")));
     }
